# castle

./: Cargo.toml  README.md
castle/: Cargo.toml
castle/src/: castle.rs  lib.rs
castle/src/castle_object/: castle_struct.rs  resolver_return_types.rs
castle/src/castle_schema/: castle_schema.rs  mod.rs
castle/src/castle_struct/: castle_struct.rs  mod.rs  resolver_return_types.rs
castle/src/directives/: directives.rs  mod.rs
castle/src/resolvers/: dummy_data_for_tests.rs  generic_resolver.rs  generic_resolver_fn.rs  get_dummy_data_for_tests.rs  mod.rs  resolve_query_wants.rs  resolver_map.rs  resolver_type.rs  resolvers.rs
castle/src/resolvers/individual_resolvers/: mod.rs  page_info_resolver.rs
castle/src/types/: mod.rs  result.rs  value.rs
castle/src/validation/: mod.rs  validate_directives_exist.rs  validate_everything.rs  validate_resolvers_exist.rs
castle/src/validation/executor/: mod.rs
castle/src/validation/self_validation_schema/: check_args.rs  check_enums.rs  check_resolvers.rs  check_type.rs  mod.rs  self_validate_schema.rs
castle/src/validation/validate_backend_fns_with_schema/: mod.rs  validate_backend_fns_with_schema.rs
castle/src/validation/validate_inputs/: mod.rs
castle/src/validation/validate_projection/: mod.rs
castle/src/validation/validate_query/: mod.rs
castle/src/validation/validate_query_with_schema/: mod.rs  query_resolver_is_valid.rs  validate_match_arms.rs  validate_object_projection.rs  validate_query_with_schema.rs  validate_single_field.rs  validate_value_to_type.rs
castle/src/validation/validate_schema/: mod.rs  validate_directive_definitions.rs  validate_directives.rs  validate_enums.rs  validate_types.rs
castle/src/validation/validate_schema_with_functions/: mod.rs  validate_schema_with_resolvers.rs
castle/tests/: message_execute_tests.rs  mod.rs  query_validation.rs  schema_validation.rs  tests_castle_and_resolving_wants.rs  tests_individual_resolvers_with_schema_and_query.rs  tests_self_validation.rs  tests_validate_backend_to_schema.rs  tests_validate_resolvers_to_schema.rs  tests_validate_schema_to_query.rs
castle_api/: Cargo.toml
castle_api/src/: castle.rs  lib.rs
castle_api/src/context/: mod.rs
castle_api/src/executor/: mod.rs
castle_api/src/types/: mod.rs  result.rs  schema_item.rs  value.rs
castle_api/src/validation/: mod.rs  validate_directives_exist.rs  validate_resolvers_exist.rs
castle_api/src/validation/executor/: mod.rs
castle_api/src/validation/validate_inputs/: mod.rs
castle_api/src/validation/validate_projection/: mod.rs
castle_api/src/validation/validate_schema/: mod.rs  validate_directive_definitions.rs  validate_directives.rs  validate_enums.rs  validate_types.rs
castle_api/tests/: message_execute_tests.rs  query_validation.rs  schema_validation.rs
castle_error/: Cargo.toml
castle_error/src/: lib.rs
castle_macro/: Cargo.toml
castle_macro/src/: lib.rs
castle_macro/src/directives/: mod.rs
castle_macro/src/inputs/: mod.rs
castle_macro/src/shared_functions/: mod.rs
castle_macro/src/type_struct/: mod.rs
castle_macro/src/types/: get_from_conversion.rs  mod.rs
castle_macro/tests/: macro_tests.rs
castle_query_parser/: Cargo.toml
castle_query_parser/src/: lib.rs
castle_query_parser/src/parsers/: mod.rs  parse_projection.rs
castle_query_parser/src/types/: mod.rs  projection.rs
castle_query_parser/tests/: query_parser_tests.rs
castle_schema_parser/: Cargo.toml
castle_schema_parser/src/: lib.rs
castle_schema_parser/src/parsers/: parse_directive_definition.rs  parse_directives.rs  parse_enum_definition.rs  parse_input_type_definition.rs  parse_kind.rs  parse_schema.rs  parse_type_definition.rs
castle_schema_parser/src/types/: directive_definitions.rs  enum_definition.rs  field_definition.rs  input_definition.rs  kind.rs  mod.rs  schema_definition.rs  type_definition.rs
castle_schema_parser/tests/: schema_parser_tests.rs
castle_shared_parser/: Cargo.toml
castle_shared_parser/src/: lib.rs  parse_inputs.rs
castle_tokenizer/: Cargo.toml
castle_tokenizer/src/: lib.rs  tokenizable.rs  tokenizer.rs
castle_tokenizer/src/extensions/: mod.rs
castle_tokenizer/src/syntax/: mod.rs  primitive.rs  token.rs
castle_tokenizer/src/token_parsers/: mod.rs  parse_ident_or_keyword.rs  parse_newline.rs  parse_numbers.rs  parse_operator.rs  parse_string.rs  skip_comment.rs
castle_types/: Cargo.toml
castle_types/src/: context.rs  convert_from.rs  directive_definitions.rs  directive_trait.rs  enum_definition.rs  error.rs  input_definition.rs  inputs.rs  kind.rs  lib.rs  message.rs  mod.rs  next.rs  number.rs  primitive.rs  projection.rs  resolves_fields.rs  schema_definition.rs  schema_item.rs  state.rs  type_definition.rs  value.rs
parser_and_schema/: Cargo.toml
parser_and_schema/src/: lib.rs
parser_and_schema/src/ast/: argument.rs  directive_definition.rs  enum_definition.rs  field_definition.rs  keyword.rs  match_statement.rs  mod.rs  schema_definition.rs  trait_definition.rs  want.rs
parser_and_schema/src/ast/syntax_definitions/: argument.rs  directive_definition.rs  (+10 more)
parser_and_schema/src/token/: token.rs
parser_and_schema/src/tokenizer/: mod.rs  parse_arguments.rs  parse_enum_value.rs  parse_hashmap_type.rs  parse_identifier.rs  parse_identifier_type_or_keyword.rs  parse_keyword.rs  parse_newline.rs  parse_numbers.rs  parse_operator.rs  parse_option_type.rs  parse_primitive_type.rs  parse_string.rs  parse_vec_type.rs  tokenizer.rs  tokenizer_utils.rs
parser_and_schema/tests/: mod.rs  query_parser_tests.rs  query_tests_utils.rs  schema_parser_tests.rs
shared/: Cargo.toml
shared/src/: args.rs  castle_error.rs  lib.rs
shared_parser/: Cargo.toml
shared_parser/src/: lib.rs  parse_inputs.rs
tokenizer/: Cargo.toml
tokenizer/src/: lib.rs  tokenizable.rs  tokenizer.rs
tokenizer/src/extensions/: mod.rs
tokenizer/src/syntax/: keyword.rs  mod.rs  primitive.rs  punctuator.rs  token.rs
tokenizer/src/token_parsers/: mod.rs  parse_ident_or_keyword.rs  parse_newline.rs  parse_numbers.rs  parse_operator.rs  parse_string.rs  skip_comment.rs
(+167 files in other folders)
