[package]
name = "castle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser_and_schema = { path = "../parser_and_schema" }
serde = { version = "1.0.117", features = ["derive"] }
rmpv = { version = "1.0.0" }
shared = { path = "../shared" }