[package]
name = "castle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
rmpv = { version = "1.0.0" }
castle_error = { path = "../castle_error" }
uuid = "1.0.0"
schema_parser = { path = "../schema_parser" }
query_parser = { path = "../query_parser" }
shared_parser = { path = "../shared_parser" }
async-trait = "0.1.53"
derivative = "2.2.0"
[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt"]}