[package]
name = "castle_api"
version = "0.4.5"
edition = "2021"
license = "MIT"
description = "Castle API, graph api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
rmpv = { version = "1.0.0" }
uuid = "1.0.0"
castle_error = { path = "../castle_error" }
castle_schema_parser = { path = "../castle_schema_parser" }
castle_query_parser = { path = "../castle_query_parser" }
castle_shared_parser = { path = "../castle_shared_parser" }
castle_tokenizer = { path = "../castle_tokenizer" }
async-trait = "0.1.53"
derivative = "2.2.0"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt"]}
