[package]
name = "castle_error"
version = "0.5.3"
edition = "2021"
license = "MIT"
description = "Castle Error, error handling for Castle systems"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
castle_input_cursor = { path = "../castle_input_cursor" , version = "0.5.3" }
serde = { version = "1.0.117", features = ["derive"] }
rmp-serde = "1.1.0"
byte = "0.2.6"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
