[package]
name = "castle_macro"
version = "0.12.0"
edition = "2021"
license = "MIT"
description = "Castle Macro, macros to make your life easier"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
unzip-n = "0.1.2"
syn = { version = "1.0.95", features = ["full"] }
quote = "1.0.18"
proc-macro2 = "1.0.39"
castle_schema_parser = { path = "../castle_schema_parser" , version = "0.12.0" }


[dev-dependencies]
castle_api = { path = "../castle_api" }
castle_schema_parser = { path = "../castle_schema_parser" }
anyhow = "1.0.57"
