[package]
name = "castle_schema_parser"
version = "0.6.2"
edition = "2021"
license = "MIT"
description = "Castle Schema Parser"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
castle_tokenizer = { path = "../castle_tokenizer" , version = "0.6.2" }
castle_shared_parser = { path = "../castle_shared_parser" , version = "0.6.2" }
castle_types = { path = "../castle_types" , version = "0.6.2" }
