[package]
name = "castle_tokenizer"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
castle_error = { path = "../castle_error", version = "0.2.0" }
castle_input_cursor = { path = "../castle_input_cursor", version = "0.2.0" }
fast-float = "0.2.0"
