[package]
name = "castle_tokenizer"
version = "0.2.5"
edition = "2021"
license = "MIT"
description = "Castle Tokenizer: tokenizer "
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
castle_error = { path = "../castle_error" }
castle_input_cursor = { path = "../castle_input_cursor" }
fast-float = "0.2.0"
