[package]
name = "castle_tokenizer"
version = "0.6.3"
edition = "2021"
license = "MIT"
description = "Castle Tokenizer: tokenizer"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
castle_input_cursor = { path = "../castle_input_cursor" , version = "0.6.3" }
fast-float = "0.2.0"
serde = { version = "1.0.117", features = ["derive"] }
castle_types = { path = "../castle_types" , version = "0.6.3" }
