[package]
name = "castle_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
castle_input_cursor = { path = "../castle_input_cursor" , version = "0.5.9" }
serde = { version = "1.0.117", features = ["derive"] }
rmp-serde = "1.1.0"
byte = "0.2.6"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
async-trait = "0.1.53"
tokio = { version = "1.17.0", features = ["sync", "macros"]}
async-recursion = "1.0.0"
anyhow = "1.0.57"
