[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input-cursor = { path = "../input-cursor" }
serde = { version = "1.0.117", features = ["derive"] }
rmp-serde = "0.15.5"
byte = "0.2.6"
uuid = { version = "0.8", features = ["serde", "v4"] }