[package]
name = "shared_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokenizer = { path = "../tokenizer", version = "0.1.0" }
castle_error = { path = "../castle_error", version = "0.1.0" }
